Prevent background from jumping underneath modal

--- a/core/modules/system/css/system.css
+++ b/core/modules/system/css/system.css
@@ -4,6 +4,13 @@
  */
 
 /**
+ * Prevent background from jumping underneath modal.
+ */
+html.dialog-open {
+  position: inherit;
+}
+
+/**
  * Autocomplete.
  *
  * @see autocomplete.js
